--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -18,6 +18,9 @@
         @include respond(tab-port) {
             top: 3rem;
         }
+        @include respond(phone) {
+            right: 3rem;
+        }
     }
 
     &__background {
@@ -37,6 +40,9 @@
 
         @include respond(tab-port) {
             top: 3rem;
+        }
+        @include respond(phone) {
+            right: 3.5rem;
         }
     }
 
